# compressed_streams

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: CMakeLists_googletest.txt.in  brotli.cmake  googletest.cmake  lz4.cmake  snappy.cmake  zlib.cmake  zstd.cmake
cmake/patch/: lz4_CMakeLists.txt  zstd_CMakeLists.txt
lib/: CMakeLists.txt
lib/include/compressed_streams/: brotli_stream.h  byte_ostream.h  istream_view.h  istreambuf_view.h  lz4_stream.h  lzma_stream.h  zlib_stream.h  zstd_stream.h
lib/src/: brotli_stream.cpp  byte_ostream.cpp  istream_view.cpp  lz4_stream.cpp  lzma_stream.cpp  zlib_stream.cpp  zstd_stream.cpp
lib/src/internal/: strict_fstream.hpp  zstr.hpp
lib/tests/: common.h  test_brotli_stream.cpp  test_istream_view.cpp  test_lz4_stream.cpp  test_lzma_stream.cpp  test_zlib_stream.cpp  test_zstd_stream.cpp
